// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`aboutKoelModal.vue > renders 1`] = `
<div data-v-6b5b01a9="" class="about text-center max-w-[480px] overflow-hidden relative" data-testid="about-koel" tabindex="0">
  <main data-v-6b5b01a9="" class="p-6">
    <div data-v-6b5b01a9="" class="mb-4"><img data-v-6b5b01a9="" alt="Logo" class="inline-block" src="undefined/resources/assets/img/logo.svg" width="128"></div>
    <div data-v-6b5b01a9="" class="current-version">Koel v0.0.0</div>
    <!--v-if-->
    <p data-v-6b5b01a9="" class="author">Made with ❤️ by <a data-v-6b5b01a9="" href="https://github.com/phanan" rel="noopener" target="_blank">Phan An</a> and quite a few awesome <a data-v-6b5b01a9="" href="https://github.com/koel/koel/graphs/contributors" rel="noopener" target="_blank">contributors</a>. </p>
    <!--v-if-->
  </main>
  <footer data-v-6b5b01a9=""><button data-v-8943c846="" data-v-6b5b01a9="" class="text-base text-white border border-transparent bg-k-primary px-3.5 py-2 rounded cursor-pointer" type="button" danger="" data-testid="close-modal-btn" rounded="">Close</button></footer>
</div>
`;

exports[`aboutKoelModal.vue > renders with custom branding 1`] = `
<div data-v-6b5b01a9="" class="about text-center max-w-[480px] overflow-hidden relative" data-testid="about-koel" tabindex="0">
  <main data-v-6b5b01a9="" class="p-6">
    <div data-v-6b5b01a9="" class="mb-4"><img data-v-6b5b01a9="" alt="Logo" class="inline-block" src="http://localhost/storage/logo.svg" width="128"></div>
    <div data-v-6b5b01a9="" class="current-version">Little Bird v0.0.0</div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </main>
  <footer data-v-6b5b01a9=""><button data-v-8943c846="" data-v-6b5b01a9="" class="text-base text-white border border-transparent bg-k-primary px-3.5 py-2 rounded cursor-pointer" type="button" danger="" data-testid="close-modal-btn" rounded="">Close</button></footer>
</div>
`;
